@@ -26,19 +26,6 @@
  */
 package gov.hhs.fha.nhinc.asyncmsgs.dao;
 
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.TimeZone;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-import org.hibernate.Criteria;
-import org.hibernate.Session;
-import org.hibernate.SessionFactory;
-import org.hibernate.Transaction;
-import org.hibernate.criterion.Restrictions;
-
 import gov.hhs.fha.nhinc.asyncmsgs.model.AsyncMsgRecord;
 import gov.hhs.fha.nhinc.asyncmsgs.persistence.HibernateUtil;
 import gov.hhs.fha.nhinc.common.deferredqueuemanager.QueryDeferredQueueRequestType;
@@ -47,6 +34,17 @@ import gov.hhs.fha.nhinc.nhinclib.NullChecker;
 import gov.hhs.fha.nhinc.properties.PropertyAccessException;
 import gov.hhs.fha.nhinc.properties.PropertyAccessor;
 import gov.hhs.fha.nhinc.util.format.XMLDateUtil;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.List;
+import java.util.TimeZone;
+import org.apache.log4j.Logger;
+import org.hibernate.Criteria;
+import org.hibernate.Query;
+import org.hibernate.Session;
+import org.hibernate.SessionFactory;
+import org.hibernate.Transaction;
+import org.hibernate.criterion.Restrictions;
 
 /**
  *
@@ -54,16 +52,12 @@ import gov.hhs.fha.nhinc.util.format.XMLDateUtil;
  */
 public class AsyncMsgRecordDao {
 
-    private static Log log = LogFactory.getLog(AsyncMsgRecordDao.class);
-
+    private static final Logger LOG = Logger.getLogger(AsyncMsgRecordDao.class);
     public static final String QUEUE_DIRECTION_INBOUND = "INBOUND";
     public static final String QUEUE_DIRECTION_OUTBOUND = "OUTBOUND";
-
     public static final String QUEUE_RESPONSE_TYPE_AUTO = "AUTO";
     public static final String QUEUE_RESPONSE_TYPE_EXTERNAL = "EXTERNAL";
-
     public static final String QUEUE_STATUS_EXPIRED = "EXPIRED";
-
     public static final String QUEUE_STATUS_REQPROCESS = "REQPROCESS";
     public static final String QUEUE_STATUS_REQRCVD = "REQRCVD";
     public static final String QUEUE_STATUS_REQRCVDACK = "REQRCVDACK";
@@ -71,7 +65,6 @@ public class AsyncMsgRecordDao {
     public static final String QUEUE_STATUS_REQSENT = "REQSENT";
     public static final String QUEUE_STATUS_REQSENTACK = "REQSENTACK";
     public static final String QUEUE_STATUS_REQSENTERR = "REQSENTERR";
-
     public static final String QUEUE_STATUS_RSPSELECT = "RSPSELECT";
     public static final String QUEUE_STATUS_RSPPROCESS = "RSPPROCESS";
     public static final String QUEUE_STATUS_RSPRCVD = "RSPRCVD";
@@ -88,38 +81,32 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryByMessageIdAndDirection(String messageId, String direction) {
-        log.debug("Performing database record retrieve using message id: " + messageId + " and direction: " + direction);
+        LOG.debug("Performing database record retrieve using message id: " + messageId + " and direction: " + direction);
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.eq("MessageId", messageId));
-                    criteria.add(Restrictions.eq("Direction", direction));
-
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryByMessageIdAndDirection");
+                query.setParameter("MessageId", messageId);
+                query.setParameter("Direction", direction);
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve by message id. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve by message id. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -135,38 +122,33 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryByMessageIdAndServiceName(String messageId, String serviceName) {
-        log.debug("Performing database record retrieve using message id: " + messageId + "and service name: "
-                + serviceName);
+        LOG.debug("Performing database record retrieve using message id: " + messageId + "and service name: "
+            + serviceName);
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.eq("MessageId", messageId));
-                    criteria.add(Restrictions.eq("ServiceName", serviceName));
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryByMessageIdAndServiceName");
+                query.setParameter("MessageId", messageId);
+                query.setParameter("ServiceName", serviceName);
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve by message id and service name. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve by message id and service name. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -181,36 +163,31 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryByTime(Date timestamp) {
-        log.debug("Performing database retrieve using timestamp");
+        LOG.debug("Performing database retrieve using timestamp");
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.lt("CreationTime", timestamp));
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryByTime");
+                query.setParameter("CreationTime", timestamp);
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve by timestamp. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve by timestamp. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -226,38 +203,31 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryForExpired(Date timestamp) {
-        log.debug("Performing database retrieve for expired requests");
+        LOG.debug("Performing database retrieve for expired requests");
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.lt("CreationTime", timestamp));
-                    criteria.add(Restrictions.or(Restrictions.eq("Status", QUEUE_STATUS_REQRCVD),
-                            Restrictions.eq("Status", QUEUE_STATUS_REQRCVDACK)));
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryForExpired");
+                query.setParameter("CreationTime", timestamp);
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve by timestamp. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve by timestamp. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -271,38 +241,30 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryForDeferredQueueProcessing() {
-        log.debug("Performing database record retrieve for deferred queue manager processing.");
+        LOG.debug("Performing database record retrieve for deferred queue manager processing.");
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.eq("Direction", QUEUE_DIRECTION_INBOUND));
-                    criteria.add(Restrictions.eq("ResponseType", QUEUE_RESPONSE_TYPE_AUTO));
-                    criteria.add(Restrictions.eq("Status", QUEUE_STATUS_REQRCVDACK));
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryForDeferredQueueProcessing");
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve for deferred queue manager processing. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve for deferred queue manager processing. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -317,38 +279,30 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryForDeferredQueueSelected() {
-        log.debug("Performing database record retrieve for deferred queue manager selected.");
+        LOG.debug("Performing database record retrieve for deferred queue manager selected.");
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
-                    criteria.add(Restrictions.eq("Direction", QUEUE_DIRECTION_INBOUND));
-                    criteria.add(Restrictions.eq("ResponseType", QUEUE_RESPONSE_TYPE_AUTO));
-                    criteria.add(Restrictions.eq("Status", QUEUE_STATUS_RSPSELECT));
-                    asyncMsgRecs = criteria.list();
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                Query query = sess.getNamedQuery("queryForDeferredQueueSelected");
+                asyncMsgRecs = query.list();
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve for deferred queue manager selected. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve for deferred queue manager selected. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -364,84 +318,79 @@ public class AsyncMsgRecordDao {
      * @return matching records
      */
     public List<AsyncMsgRecord> queryByCriteria(QueryDeferredQueueRequestType queryCriteria) {
-        log.debug("Performing database record retrieve using AsyncMsgRecord instance to hold criteria.");
+        LOG.debug("Performing database record retrieve using AsyncMsgRecord instance to hold criteria.");
 
         List<AsyncMsgRecord> asyncMsgRecs = null;
         Session sess = null;
 
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    // Instantiate Criteria class and populate based on non-null queryCriteria attributes
-                    boolean criteriaPopulated = false;
-                    Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
+            sess = getSession();
+            if (sess != null) {
+                // Instantiate Criteria class and populate based on non-null queryCriteria attributes
+                boolean criteriaPopulated = false;
+                Criteria criteria = sess.createCriteria(AsyncMsgRecord.class);
 
-                    if (queryCriteria.getCreationBeginTime() != null) {
-                        Date date = XMLDateUtil.gregorian2date(queryCriteria.getCreationBeginTime());
-                        criteria.add(Restrictions.ge("CreationTime", date));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getCreationEndTime() != null) {
-                        Date date = XMLDateUtil.gregorian2date(queryCriteria.getCreationEndTime());
-                        criteria.add(Restrictions.le("CreationTime", date));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getResponseBeginTime() != null) {
-                        Date date = XMLDateUtil.gregorian2date(queryCriteria.getResponseBeginTime());
-                        criteria.add(Restrictions.ge("ResponseTime", date));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getResponseEndTime() != null) {
-                        Date date = XMLDateUtil.gregorian2date(queryCriteria.getResponseEndTime());
-                        criteria.add(Restrictions.le("ResponseTime", date));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getServiceName() != null && queryCriteria.getServiceName().size() > 0) {
-                        criteria.add(Restrictions.in("ServiceName", queryCriteria.getServiceName()));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getDirection() != null) {
-                        criteria.add(Restrictions.eq("Direction", queryCriteria.getDirection()));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getCommunityId() != null && queryCriteria.getCommunityId().size() > 0) {
-                        criteria.add(Restrictions.in("CommunityId", queryCriteria.getCommunityId()));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getStatus() != null && queryCriteria.getStatus().size() > 0) {
-                        criteria.add(Restrictions.in("Status", queryCriteria.getStatus()));
-                        criteriaPopulated = true;
-                    }
-                    if (queryCriteria.getResponseType() != null) {
-                        criteria.add(Restrictions.eq("ResponseType", queryCriteria.getResponseType()));
-                        criteriaPopulated = true;
-                    }
+                if (queryCriteria.getCreationBeginTime() != null) {
+                    Date date = XMLDateUtil.gregorian2date(queryCriteria.getCreationBeginTime());
+                    criteria.add(Restrictions.ge("CreationTime", date));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getCreationEndTime() != null) {
+                    Date date = XMLDateUtil.gregorian2date(queryCriteria.getCreationEndTime());
+                    criteria.add(Restrictions.le("CreationTime", date));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getResponseBeginTime() != null) {
+                    Date date = XMLDateUtil.gregorian2date(queryCriteria.getResponseBeginTime());
+                    criteria.add(Restrictions.ge("ResponseTime", date));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getResponseEndTime() != null) {
+                    Date date = XMLDateUtil.gregorian2date(queryCriteria.getResponseEndTime());
+                    criteria.add(Restrictions.le("ResponseTime", date));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getServiceName() != null && queryCriteria.getServiceName().size() > 0) {
+                    criteria.add(Restrictions.in("ServiceName", queryCriteria.getServiceName()));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getDirection() != null) {
+                    criteria.add(Restrictions.eq("Direction", queryCriteria.getDirection()));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getCommunityId() != null && queryCriteria.getCommunityId().size() > 0) {
+                    criteria.add(Restrictions.in("CommunityId", queryCriteria.getCommunityId()));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getStatus() != null && queryCriteria.getStatus().size() > 0) {
+                    criteria.add(Restrictions.in("Status", queryCriteria.getStatus()));
+                    criteriaPopulated = true;
+                }
+                if (queryCriteria.getResponseType() != null) {
+                    criteria.add(Restrictions.eq("ResponseType", queryCriteria.getResponseType()));
+                    criteriaPopulated = true;
+                }
 
-                    // If at least one queryCriteria value was populated, get the results
-                    if (criteriaPopulated) {
-                        asyncMsgRecs = criteria.list();
-                    } else {
-                        log.error("No query criteria defined.  At least one criteria value must be defined.");
-                    }
+                // If at least one queryCriteria value was populated, get the results
+                if (criteriaPopulated) {
+                    asyncMsgRecs = criteria.list();
                 } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
+                    LOG.error("No query criteria defined.  At least one criteria value must be defined.");
                 }
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
 
-            if (log.isDebugEnabled()) {
-                log.debug("Completed database record retrieve by criteria. Results found: "
-                        + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Completed database record retrieve by criteria. Results found: "
+                    + ((asyncMsgRecs == null) ? "0" : Integer.toString(asyncMsgRecs.size())));
             }
         } finally {
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
@@ -456,7 +405,7 @@ public class AsyncMsgRecordDao {
      * @return true - success; false - failure
      */
     public boolean insertRecords(List<AsyncMsgRecord> asyncMsgRecs) {
-        log.debug("AsyncMsgRecordDao.insertRecords() - Begin");
+        LOG.debug("AsyncMsgRecordDao.insertRecords() - Begin");
 
         Session session = null;
         Transaction tx = null;
@@ -467,25 +416,24 @@ public class AsyncMsgRecordDao {
             AsyncMsgRecord dbRecord = null;
 
             try {
-                SessionFactory sessionFactory = HibernateUtil.getSessionFactory();
-                session = sessionFactory.openSession();
+                session = getSession();
                 tx = session.beginTransaction();
 
-                log.info("Inserting Record...");
+                LOG.info("Inserting Record...");
 
                 for (int i = 0; i < size; i++) {
                     dbRecord = asyncMsgRecs.get(i);
                     session.persist(dbRecord);
                 }
 
-                log.info("AsyncMsgRecord List Inserted successfully...");
+                LOG.info("AsyncMsgRecord List Inserted successfully...");
                 tx.commit();
             } catch (Exception e) {
                 result = false;
                 if (tx != null) {
                     tx.rollback();
                 }
-                log.error("Error during insertion caused by :" + e.getMessage());
+                LOG.error("Error during insertion caused by :" + e.getMessage());
             } finally {
                 // Actual insertion will happen at this step
                 if (session != null) {
@@ -494,7 +442,7 @@ public class AsyncMsgRecordDao {
             }
         }
 
-        log.debug("AsyncMsgRecordDao.insertRecords() - End");
+        LOG.debug("AsyncMsgRecordDao.insertRecords() - End");
         return result;
     }
 
@@ -504,41 +452,36 @@ public class AsyncMsgRecordDao {
      * @param asyncMsgRecord object to save.
      */
     public void save(AsyncMsgRecord asyncMsgRecord) {
-        log.debug("AsyncMsgRecordDao.save() - Begin");
+        LOG.debug("AsyncMsgRecordDao.save() - Begin");
 
         Session sess = null;
         Transaction trans = null;
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    trans = sess.beginTransaction();
-                    sess.saveOrUpdate(asyncMsgRecord);
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                trans = sess.beginTransaction();
+                sess.saveOrUpdate(asyncMsgRecord);
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
         } finally {
             if (trans != null) {
                 try {
                     trans.commit();
                 } catch (Throwable t) {
-                    log.error("Failed to commit transaction: " + t.getMessage(), t);
+                    LOG.error("Failed to commit transaction: " + t.getMessage(), t);
                 }
             }
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
 
-        log.debug("AsyncMsgRecordDao.save() - End");
+        LOG.debug("AsyncMsgRecordDao.save() - End");
     }
 
     /**
@@ -547,52 +490,47 @@ public class AsyncMsgRecordDao {
      * @param asyncMsgRecs object to save.
      */
     public void save(List<AsyncMsgRecord> asyncMsgRecs) {
-        log.debug("AsyncMsgRecordDao.save(list) - Begin");
+        LOG.debug("AsyncMsgRecordDao.save(list) - Begin");
 
         Session sess = null;
         Transaction trans = null;
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    trans = sess.beginTransaction();
+            sess = getSession();
+            if (sess != null) {
+                trans = sess.beginTransaction();
 
-                    int size = asyncMsgRecs.size();
-                    AsyncMsgRecord dbRecord = null;
+                int size = asyncMsgRecs.size();
+                AsyncMsgRecord dbRecord = null;
 
-                    log.info("Saving Records...");
+                LOG.info("Saving Records...");
 
-                    for (int i = 0; i < size; i++) {
-                        dbRecord = asyncMsgRecs.get(i);
-                        sess.saveOrUpdate(dbRecord);
-                    }
-
-                    log.info("AsyncMsgRecord List Saved successfully...");
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
+                for (int i = 0; i < size; i++) {
+                    dbRecord = asyncMsgRecs.get(i);
+                    sess.saveOrUpdate(dbRecord);
                 }
+
+                LOG.info("AsyncMsgRecord List Saved successfully...");
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
         } finally {
             if (trans != null) {
                 try {
                     trans.commit();
                 } catch (Throwable t) {
-                    log.error("Failed to commit transaction: " + t.getMessage(), t);
+                    LOG.error("Failed to commit transaction: " + t.getMessage(), t);
                 }
             }
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
 
-        log.debug("AsyncMsgRecordDao.save(list) - End");
+        LOG.debug("AsyncMsgRecordDao.save(list) - End");
     }
 
     /**
@@ -601,40 +539,35 @@ public class AsyncMsgRecordDao {
      * @param asyncMsgRecord object to save.
      */
     public void delete(AsyncMsgRecord asyncMsgRecord) {
-        log.debug("Performing a database record delete on asyncmsgrepo table");
+        LOG.debug("Performing a database record delete on asyncmsgrepo table");
 
         Session sess = null;
         Transaction trans = null;
         try {
-            SessionFactory fact = HibernateUtil.getSessionFactory();
-            if (fact != null) {
-                sess = fact.openSession();
-                if (sess != null) {
-                    trans = sess.beginTransaction();
-                    sess.delete(asyncMsgRecord);
-                } else {
-                    log.error("Failed to obtain a session from the sessionFactory");
-                }
+            sess = getSession();
+            if (sess != null) {
+                trans = sess.beginTransaction();
+                sess.delete(asyncMsgRecord);
             } else {
-                log.error("Session factory was null");
+                LOG.error("Failed to obtain a session from the sessionFactory");
             }
         } finally {
             if (trans != null) {
                 try {
                     trans.commit();
                 } catch (Throwable t) {
-                    log.error("Failed to commit transaction: " + t.getMessage(), t);
+                    LOG.error("Failed to commit transaction: " + t.getMessage(), t);
                 }
             }
             if (sess != null) {
                 try {
                     sess.close();
                 } catch (Throwable t) {
-                    log.error("Failed to close session: " + t.getMessage(), t);
+                    LOG.error("Failed to close session: " + t.getMessage(), t);
                 }
             }
         }
-        log.debug("Completed database record delete");
+        LOG.debug("Completed database record delete");
     }
 
     /**
@@ -642,7 +575,7 @@ public class AsyncMsgRecordDao {
      * expiration settings. All expired records will be updated with an expired status.
      */
     public void checkExpiration() {
-        log.debug("AsyncMsgRecordDao.checkExpiration() - Begin");
+        LOG.debug("AsyncMsgRecordDao.checkExpiration() - Begin");
 
         // Read the delta properties from the gateway.properties file
         long value = 0;
@@ -650,20 +583,20 @@ public class AsyncMsgRecordDao {
 
         try {
             value = PropertyAccessor.getInstance().getPropertyLong(NhincConstants.GATEWAY_PROPERTY_FILE,
-                    NhincConstants.ASYNC_DB_REC_EXP_VAL_PROP);
+                NhincConstants.ASYNC_DB_REC_EXP_VAL_PROP);
         } catch (PropertyAccessException ex) {
-            log.error("Error: Failed to retrieve " + NhincConstants.ASYNC_DB_REC_EXP_VAL_PROP + " from property file: "
-                    + NhincConstants.GATEWAY_PROPERTY_FILE);
-            log.error(ex.getMessage());
+            LOG.error("Error: Failed to retrieve " + NhincConstants.ASYNC_DB_REC_EXP_VAL_PROP + " from property file: "
+                + NhincConstants.GATEWAY_PROPERTY_FILE);
+            LOG.error(ex.getMessage());
         }
 
         try {
             units = PropertyAccessor.getInstance().getProperty(NhincConstants.GATEWAY_PROPERTY_FILE,
-                    NhincConstants.ASYNC_DB_REC_EXP_VAL_UNITS_PROP);
+                NhincConstants.ASYNC_DB_REC_EXP_VAL_UNITS_PROP);
         } catch (PropertyAccessException ex) {
-            log.error("Error: Failed to retrieve " + NhincConstants.ASYNC_DB_REC_EXP_VAL_UNITS_PROP
-                    + " from property file: " + NhincConstants.GATEWAY_PROPERTY_FILE);
-            log.error(ex.getMessage());
+            LOG.error("Error: Failed to retrieve " + NhincConstants.ASYNC_DB_REC_EXP_VAL_UNITS_PROP
+                + " from property file: " + NhincConstants.GATEWAY_PROPERTY_FILE);
+            LOG.error(ex.getMessage());
         }
 
         // Determine the time to query on
@@ -674,12 +607,12 @@ public class AsyncMsgRecordDao {
 
         // Update all of the records that were returned from the query
         for (AsyncMsgRecord rec : asyncMsgRecs) {
-            rec.setDuration(new Long(0));
+            rec.setDuration(Long.valueOf(0));
             rec.setStatus(QUEUE_STATUS_EXPIRED);
             save(rec);
         }
 
-        log.debug("AsyncMsgRecordDao.checkExpiration() - End");
+        LOG.debug("AsyncMsgRecordDao.checkExpiration() - End");
     }
 
     private Date calculateExpirationValue(long value, String units) {
@@ -704,4 +637,14 @@ public class AsyncMsgRecordDao {
         return expirationValue;
     }
 
+    protected Session getSession() {
+        Session session = null;
+        SessionFactory fact = HibernateUtil.getSessionFactory();
+        if (fact != null) {
+            session = fact.openSession();
+        } else {
+            LOG.error("Session is null");
+        }
+        return session;
+    }
 }
